# astran

./: DEPENDENCIES.md  Makefile  README.md  comandos  setup-env.sh
Astran/: CMakeLists.txt  Makefile
Astran/Images/: makefile
Astran/docs/: Makefile  make.bat
Astran/docs/source/: about.rst  code.rst  commands.rst  conf.py  index.rst
Astran/images/: close.xpm  help.xpm  load_lay.xpm  load_net.xpm  load_pl.xpm  load_tec.xpm  makefile  read_script.xpm  refresh.xpm  save_lay.xpm  save_net.xpm  save_pl.xpm  view_cellgen.xpm  view_cir.xpm  view_pref.xpm  view_rules.xpm
Astran/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
Astran/src/: astran.fbp  autocell2.cpp  designmng.cpp  designmng.h  icpdApp.cpp  icpdApp.h  icpdfrm.cpp  icpdfrm.h  wxinterface.cpp  wxinterface.h
SightGL/: CMakeLists.txt
SightGL/images/: drag_img.h  line_img.h  makefile  minus_img.h  ruler_img.h  select_img.h
SightGL/nbproject/: Makefile-Release.mk
SightGL/src/: app.cpp  basicglpane.cpp
SightGL/src/interface/: interface.cpp
SightGL/src/sight/: sight.cpp  sight.h
wxSightGL/: CMakeLists.txt  Makefile
wxSightGL/images/: cif_img.h  label_img.h  plus_img.h  rectangle_img.h  ruler_img.h  select_img.h  sight_img.h  wire_img.h  zoom_img.h
wxSightGL/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
wxSightGL/src/: basicglpane.cpp  basicglpane.h
wxSightGL/src/interface/: interface.cpp  interface.h
wxSightGL/src/sight/: io_files.cpp  opengl.h  sight.cpp
wxSightGL/src/sight/states/: select.cpp
